# Lab3-OOP

./: CMakeLists.txt  main.cpp
include/: array.h  figure.h  point.h  rectangle.h  rhombus.h  trapezoid.h
src/: array.cpp  figure.cpp  point.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
tests/: tests.cpp
